@@ -1,6 +1,9 @@
 Version 2.1.76
+    Advanced Salvage has been renamed to Scrap Collector
     Fixed a bug where Repair was repairing too much
-    Fixed a bug where Arcane Salvage was used to determine how many materials a player could salvage from an item
+    Fixed a bug where Arcane Salvage was used to determine how many materials a player could salvage from an item instead of Scrap Collector (formerly Advanced Salvage)
+    Fixed a bug where messages about an item being too damage to salvage were being sent twice
+    You can not salvage without at least 1 rank in Scrap Collector now (formerly Advanced Salvage)
     Removed the minimum quantity field from the repair config
     Removed the item data (metadata) field from repair config as its not used anymore
     Salvage will no longer return the max amount of materials possible, instead you are guaranteed one item and then some luck is involved on how many items are returned.
